<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Questions">

    <LinearLayout
        android:id="@+id/sandulescu_razvan_alexandru_LLTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sandulescu_razvan_alexandru_tvCurrentQuestionNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/text_1_10"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sandulescu_razvan_alexandru_tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/text_question"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sandulescu_razvan_alexandru_LLBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sandulescu_razvan_alexandru_LLTop">

        <Button
            android:id="@+id/sandulescu_razvan_alexandru_btnOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/round_corner"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/text_option_1" />

        <Button
            android:id="@+id/sandulescu_razvan_alexandru_btnOption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/round_corner"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/text_option_2" />

        <Button
            android:id="@+id/sandulescu_razvan_alexandru_btnOption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/round_corner"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/text_option_3" />

        <Button
            android:id="@+id/sandulescu_razvan_alexandru_btnOption4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/round_corner"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/text_option_4" />
    </LinearLayout>

    <TextView
        android:id="@+id/sandulescu_razvan_alexandru_tvCountdown"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text_10"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/round_corner"
        android:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@id/sandulescu_razvan_alexandru_LLBottom"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>